@@ -221,6 +221,96 @@ package Wibble;
 
 #-----------------------------------------------------------------------------
 
+## name using #line directive with double-quoted filename
+## filename Foo.pm
+## failures 0
+## cut
+
+#line 99 "Bar.pm"
+package Bar;
+
+#-----------------------------------------------------------------------------
+
+## name using #line directive with bareword filename
+## filename Foo.pm
+## failures 0
+## cut
+
+#line 99 Bar.pm
+package Bar;
+
+#-----------------------------------------------------------------------------
+
+## name #line directive appears after package declaration
+## filename Foo.pm
+## failures 1
+## cut
+
+package Bar;
+#line 99 Bar.pm
+
+#-----------------------------------------------------------------------------
+
+## name multiple #line directives
+## filename Foo.pm
+## failures 1
+## cut
+
+#line 99 Bar.pm
+#line 999 Baz.pm
+package Bar;
+
+#-----------------------------------------------------------------------------
+
+## name #line directive with multi-part path
+## filename Wrong.pm
+## failures 0
+## cut
+
+#line 99 Foo/Bar/Baz.pm
+package Foo::Bar::Baz;
+
+#-----------------------------------------------------------------------------
+
+## name #line directive with multi-part path in lib/ dir
+## filename lib/Wrong.pm
+## failures 0
+## cut
+
+#line 99 lib/Foo/Bar/Baz.pm
+package Foo::Bar::Baz;
+
+#-----------------------------------------------------------------------------
+
+## name #line directive with partially matching multi-part path
+## filename Wrong.pm
+## failures 0
+## cut
+
+#line 99 Foo/Bar/Baz.pm
+package Baz;
+
+#-----------------------------------------------------------------------------
+
+## name no package declaration at all
+## filename Foo.pm
+## failures 0
+## cut
+
+1;
+
+#-----------------------------------------------------------------------------
+
+## name #line directive with no package declaration at all
+## filename Foo.pm
+## failures 0
+## cut
+
+#line 1 Baz.pm
+1;
+
+#-----------------------------------------------------------------------------
+
 ##############################################################################
 #      $URL$
 #     $Date$
